{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 24,
  "lineage": "7992a758-79cd-c918-0ee9-e07c9acc5fec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08a6efd148b1f7504",
            "arn": "arn:aws:ec2:us-east-1:508325854876:instance/i-0b13dd21087f6ab4c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b13dd21087f6ab4c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0267d1b3d6671956c",
            "private_dns": "ip-10-10-0-208.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.208",
            "public_ip": "44.198.52.237",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "IAC": "terraform",
                  "env": "dev",
                  "project": "cerberus"
                },
                "tags_all": {
                  "IAC": "terraform",
                  "env": "dev",
                  "project": "cerberus"
                },
                "throughput": 125,
                "volume_id": "vol-045390a4cba07add7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d550a4125b1693c0",
            "tags": {
              "Name": "ec2_instance_virginia-cerberus-dev"
            },
            "tags_all": {
              "IAC": "terraform",
              "Name": "ec2_instance_virginia-cerberus-dev",
              "env": "dev",
              "project": "cerberus"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-082275757f0df5263"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_security_group_virginia",
            "aws_subnet.public_subnet_virginia",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.terraform_key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitoring_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508325854876:internet-gateway/igw-0ce17f5945e689eb3",
            "id": "igw-0ce17f5945e689eb3",
            "owner_id": "508325854876",
            "region": "us-east-1",
            "tags": {
              "Name": "igw_virginia-cerberus-dev"
            },
            "tags_all": {
              "IAC": "terraform",
              "Name": "igw_virginia-cerberus-dev",
              "env": "dev",
              "project": "cerberus"
            },
            "vpc_id": "vpc-039b96a72b5c52b84"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508325854876:route-table/rtb-0b79f2333bee8b9b5",
            "id": "rtb-0b79f2333bee8b9b5",
            "owner_id": "508325854876",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ce17f5945e689eb3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table_virginia-cerberus-dev"
            },
            "tags_all": {
              "IAC": "terraform",
              "Name": "public_route_table_virginia-cerberus-dev",
              "env": "dev",
              "project": "cerberus"
            },
            "timeouts": null,
            "vpc_id": "vpc-039b96a72b5c52b84"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_virginia",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00639964c328464f3",
            "region": "us-east-1",
            "route_table_id": "rtb-0b79f2333bee8b9b5",
            "subnet_id": "subnet-0d550a4125b1693c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_virginia",
            "aws_route_table.public_route_table_virginia",
            "aws_subnet.public_subnet_virginia",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508325854876:security-group/sg-082275757f0df5263",
            "description": "Security group for EC2 instance in Virginia",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082275757f0df5263",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2_security_group_virginia-cerberus-dev",
            "name_prefix": "",
            "owner_id": "508325854876",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_security_group_virginia-cerberus-dev"
            },
            "tags_all": {
              "IAC": "terraform",
              "Name": "ec2_security_group_virginia-cerberus-dev",
              "env": "dev",
              "project": "cerberus"
            },
            "timeouts": null,
            "vpc_id": "vpc-039b96a72b5c52b84"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508325854876:subnet/subnet-071da23640ce7e16a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071da23640ce7e16a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "508325854876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private_subnet_virginia-cerberus-dev"
            },
            "tags_all": {
              "IAC": "terraform",
              "Name": "private_subnet_virginia-cerberus-dev",
              "env": "dev",
              "project": "cerberus"
            },
            "vpc_id": "vpc-039b96a72b5c52b84"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnet_virginia",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508325854876:subnet/subnet-0d550a4125b1693c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d550a4125b1693c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "508325854876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public_subnet_virginia-cerberus-dev"
            },
            "tags_all": {
              "IAC": "terraform",
              "Name": "public_subnet_virginia-cerberus-dev",
              "env": "dev",
              "project": "cerberus"
            },
            "vpc_id": "vpc-039b96a72b5c52b84"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508325854876:vpc/vpc-039b96a72b5c52b84",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-09198d35c20ebdf35",
            "default_route_table_id": "rtb-0f8a7bb0ec963ddd1",
            "default_security_group_id": "sg-01521750a6d873809",
            "dhcp_options_id": "dopt-0f689275",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-039b96a72b5c52b84",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8a7bb0ec963ddd1",
            "owner_id": "508325854876",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc_virginia-cerberus-dev"
            },
            "tags_all": {
              "IAC": "terraform",
              "Name": "vpc_virginia-cerberus-dev",
              "env": "dev",
              "project": "cerberus"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}